[metadata]
license_file = LICENSE
long_description_content_type = "text/markdown"

[flake8]
max-line-length = 88
show-source = True
exclude = __pycache__
statistics = True
select = C,E,F,W,B,PIE,N,B903

[mypy]
plugins = pydantic.mypy
disallow_untyped_defs = True
show_error_codes = True

[pydantic-mypy]
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True

[tool:isort]
profile = black
combine_as_imports = True
known_first_party = kolombo
